@@ -1,3 +1,9 @@
+2004-07-18  Kees Cook  <kees@outflux.net>
+
+	* Makefile.am, configure.in, autogen.sh, toolversions.sh:
+      cleaning up some automake misbehavior from the gtkmm patch.
+	  automake 1.4isms snuck back in.
+
 2004-07-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/sp-path.cpp (sp_path_write): Handle shape->curve==NULL.
